migrated to sequence in postgresql